--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>com.mvmlabs</groupId>
 	<artifactId>ebs-spring-boot-play</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>jar</packaging>
 
 	<name>ebs-spring-boot-play</name>
